# kiroshi

./: .gitignore  Cargo.toml
.github/workflows/: dockerize.yml
desktop/: Cargo.toml  build.rs
desktop/fonts/: kiroshi-icons.toml
desktop/src/: animation.rs  civitai.rs  icon.rs  main.rs  screen.rs  widget.rs
desktop/src/screen/: generator.rs  models.rs
desktop/src/widget/: container.rs  diffused_text.rs  optic.rs
server/: Dockerfile  main.py  requirements.txt
server/text_to_image/: __init__.py  configuration.py  detail.py
src/: detail.rs  error.rs  image.rs  inpaint.rs  lib.rs  lora.rs  model.rs  padding.rs  quality.rs  rectangle.rs  sampler.rs  seed.rs  server.rs  size.rs  stats.rs  steps.rs  stream.rs  strength.rs  upscaler.rs
