[package]
name = "kiroshi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WIP"

[workspace]
members = ["desktop"]

[workspace.dependencies]
kiroshi = { path = "." }

bytes = "1"
dirs = "6"
futures = "0.3"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "7e0d6a13fa9549006aa24b8102099feab37b0b1c" }
image = "0.25"
lilt = "0.7"
num-traits = "0.2"
rand = "0.8"
reqwest = "0.12"
serde = "1"
serde_json = "1"
tokio = "1"
toml = "0.8"

[dependencies]
bytes.workspace = true
dirs.workspace = true
futures.workspace = true
num-traits.workspace = true
rand.workspace = true
serde_json.workspace = true
toml.workspace = true

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["process", "net", "io-util"]

[profile.dev.package.image]
opt-level = 3
debug-assertions = false
