[package]
name = "kiroshi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WIP"

[dependencies]
bytes.workspace = true
dirs.workspace = true
futures.workspace = true
num-traits.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["process", "net", "fs", "time", "io-util"]

[workspace.dependencies]
bytes = "1"
dirs = "6"
futures = "0.3"
num-traits = "0.2"
rand = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
