[package]
name = "kiroshi_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
kiroshi.workspace = true
bytes.workspace = true
dirs.workspace = true
image.workspace = true
lilt.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

iced.workspace = true
iced.features = ["tokio", "image", "canvas", "web-colors", "advanced", "debug"]

reqwest.workspace = true
reqwest.features = ["json", "socks"]

tokio.workspace = true
tokio.features = ["fs"]

[build-dependencies]
iced_fontello = "0.13"
